# src/main/java/com/spm/ibooking/models/entity/User.java
@@ -1,12 +1,15 @@
 package com.spm.ibooking.models.entity;
 
 import java.util.Date;
+import java.util.List;
 
 import javax.persistence.Column;
 import javax.persistence.Entity;
+import javax.persistence.FetchType;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
+import javax.persistence.OneToMany;
 import javax.persistence.Table;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
@@ -41,6 +44,14 @@ public class User {
     @Column(unique = true, nullable = false)
     private String phone;
     
+    /**
+     * Each user has multiple reservations.
+     * 
+     */
+    @OneToMany(fetch = FetchType.EAGER, mappedBy = "user")
+    @JsonIgnore
+    private List<Reservation> reservations;
+
     @Column(insertable = false, updatable = false)
     @JsonIgnore
     private Date createdAt;
